@@ -4,10 +4,12 @@ import com.himedia.projectteamdive.dto.MusicDto;
 import com.himedia.projectteamdive.dto.RecommendationScore;
 import com.himedia.projectteamdive.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -30,7 +32,8 @@ public class AIService {
 
         // 감정과 장르에 따른 추천
         try {
-            List<MusicDto> moodBasedMusic = mr.getMusicByMoodAndGenre(mood, genre, score.getEmotionScore());
+            List<MusicDto> moodBasedMusic = mr.getMusicByMoodAndGenre(mood, genre, PageRequest.of(0, score.getEmotionScore()));
+
             if (moodBasedMusic == null || moodBasedMusic.isEmpty()) {
                 System.out.println("감정 기반 추천 결과 없음");
             } else {
@@ -45,7 +48,8 @@ public class AIService {
         // 유사 감정과 장르에 따른 추천
         try {
             if (musicList.size() < score.getTotalLimit()) {
-                List<MusicDto> similarMoodMusic = mr.getMusicBySimilarMoodsAndGenre(similarMoods, genre, score.getSimilarScore());
+                List<MusicDto> similarMoodMusic = mr.getMusicBySimilarMoodsAndGenre(similarMoods, genre, PageRequest.of(0, score.getSimilarScore()));
+
                 if (similarMoodMusic != null && !similarMoodMusic.isEmpty()) {
                     musicList.addAll(similarMoodMusic);
                     System.out.println("유사 감정 기반 추가된 개수: " + similarMoodMusic.size());
@@ -82,7 +86,8 @@ public class AIService {
         // 부족할 경우 랜덤으로 추천
         try {
             if (musicList.size() < score.getTotalLimit()) {
-                List<MusicDto> randomMusic = mr.getRandomMusic(score.getRandomScore());
+                List<MusicDto> randomMusic = mr.getRandomMusic(PageRequest.of(0, score.getRandomScore()));
+
                 if (randomMusic != null && !randomMusic.isEmpty()) {
                     musicList.addAll(randomMusic);
                     System.out.println("랜덤 추천 기반 추가된 개수: " + randomMusic.size());
@@ -96,43 +101,35 @@ public class AIService {
         }
 
         System.out.println("최종 추천 음악 개수: " + musicList.size());
-        return musicList.stream().limit(50).toList();
+        return musicList.stream().limit(20).toList();
     }
 
     private List<String> getRecommendedGenres(String mood) {
         switch (mood.toLowerCase()) {
-            case "happy":
-                return List.of("팝", "록", "전자음악");
-            case "sad":
-                return List.of("재즈", "클래식", "기타");
-            case "angry":
-                return List.of("힙합&랩", "록", "전자음악");
-            case "boring":
-                return List.of("클래식", "기타", "재즈");
+            case "happy": return Arrays.asList("팝", "록", "전자음악");
+            case "sad": return Arrays.asList("재즈", "클래식", "기타");
+            case "angry": return Arrays.asList("힙합&랩", "록", "전자음악");
+            case "boring": return Arrays.asList("클래식", "기타", "재즈");
             case "normal":
-            default:
-                return List.of("록", "팝", "힙합&랩", "재즈", "클래식", "전자음악", "기타");
+            default: return Arrays.asList("록", "팝", "힙합&랩", "재즈", "클래식", "전자음악", "기타");
         }
     }
+
 
     private List<String> getSimilarMoods(String mood) {
         switch (mood.toLowerCase()) {
-            case "happy":
-                return List.of("normal", "angry");
-            case "sad":
-                return List.of("boring", "normal");
-            case "angry":
-                return List.of("normal", "boring");
-            case "boring":
-                return List.of("sad", "happy");
-            case "normal":
-            default:
-                return List.of("happy", "sad", "angry");
+            case "happy": return Arrays.asList("normal", "angry");
+            case "sad": return Arrays.asList("boring", "normal");
+            case "angry": return Arrays.asList("normal", "boring");
+            case "boring": return Arrays.asList("sad", "happy");
+            case "normal": return Arrays.asList("happy", "sad", "angry");
+            default: return new ArrayList<>();  // 잘못된 감정 입력 시 빈 리스트 반환
         }
     }
 
+
     private RecommendationScore getRecommendationScore(String mood) {
-        int totalLimit = 50;
+        int totalLimit = 20;
 
         switch (mood.toLowerCase()) {
             case "happy":
@@ -153,7 +150,9 @@ public class AIService {
         int emotionScore = (int) (total * emotionRatio);
         int similarScore = (int) (total * similarRatio);
         int recentScore = (int) (total * recentRatio);
-        int randomScore = total - (emotionScore + similarScore + recentScore);
+
+        int allocatedSum = emotionScore + similarScore + recentScore;
+        int randomScore = Math.max(0, total - allocatedSum);
 
         return new RecommendationScore(emotionScore, similarScore, recentScore, randomScore);
     }
